@@ -59,9 +59,9 @@ static const struct st_hash_type type_strcasehash = {
 static void rehash(st_table *);
 
 #ifdef RUBY
-#define malloc xmalloc
-#define calloc xcalloc
-#define free(x) xfree(x)
+#define garbage_collect() rb_garbage_collect()
+#else
+#define garbage_collect() 0
 #endif
 
 #define numberof(array) (int)(sizeof(array) / sizeof((array)[0]))
@@ -183,12 +183,22 @@ st_init_table_with_size(const struct st_hash_type *type, st_index_t size)
 
     size = new_size(size);	/* round up to prime number */
 
+  retry:
     tbl = alloc(st_table);
+    if (!tbl) {
+      nomem:
+	if (garbage_collect()) goto retry;
+	retry 0;
+    }
     tbl->type = type;
     tbl->num_entries = 0;
     tbl->entries_packed = type == &type_numhash && size/2 <= MAX_PACKED_NUMHASH;
     tbl->num_bins = size;
     tbl->bins = (st_table_entry **)Calloc(size, sizeof(st_table_entry*));
+    if (!tbl->bins) {
+	free(tbl);
+	goto nomem;
+    }
     tbl->head = 0;
     tbl->tail = 0;
 
@@ -386,15 +396,17 @@ st_get_key(st_table *table, register st_data_t key, st_data_t *result)
     ((st_index_t)((table)->num_entries+1) * 2 <= (table)->num_bins && \
      (table)->num_entries+1 <= MAX_PACKED_NUMHASH)
 
-#define ADD_DIRECT(table, key, value, hash_val, bin_pos)\
+#define ADD_DIRECT(table, key, value, hash_val, bin_pos, result) \
 do {\
     st_table_entry *entry;\
+    result = 0;\
     if (table->num_entries > ST_DEFAULT_MAX_DENSITY * table->num_bins) {\
 	rehash(table);\
         bin_pos = hash_val % table->num_bins;\
     }\
     \
     entry = alloc(st_table_entry);\
+    if (!entry) break;
     \
     entry->hash = hash_val;\
     entry->key = key;\
@@ -411,6 +423,7 @@ do {\
     }\
     table->bins[bin_pos] = entry;\
     table->num_entries++;\
+    result = 1;\
 } while (0)
 
 static void
@@ -460,7 +473,13 @@ st_insert(register st_table *table, register st_data_t key, st_data_t value)
     FIND_ENTRY(table, ptr, hash_val, bin_pos);
 
     if (ptr == 0) {
-	ADD_DIRECT(table, key, value, hash_val, bin_pos);
+	int result;
+      retry:
+	ADD_DIRECT(table, key, value, hash_val, bin_pos, result);
+	if (!result) {
+	    if (garbage_collect()) goto retry;
+	    return -1;
+	}
 	return 0;
     }
     else {
@@ -512,7 +531,8 @@ st_insert2(register st_table *table, register st_data_t key, st_data_t value,
 void
 st_add_direct(st_table *table, st_data_t key, st_data_t value)
 {
-    st_index_t hash_val, bin_pos;
+    unsigned int hash_val, bin_pos;
+    int result;
 
     if (table->entries_packed) {
         int i;
@@ -529,7 +549,11 @@ st_add_direct(st_table *table, st_data_t key, st_data_t value)
 
     hash_val = do_hash(key, table);
     bin_pos = hash_val % table->num_bins;
-    ADD_DIRECT(table, key, value, hash_val, bin_pos);
+  retry:
+    ADD_DIRECT(table, key, value, hash_val, bin_pos, result);
+    if (!result) {
+	if (garbage_collect()) goto retry;
+    }
 }
 
 static void
@@ -539,8 +563,14 @@ rehash(register st_table *table)
     st_index_t i, new_num_bins, hash_val;
 
     new_num_bins = new_size(table->num_bins+1);
+  retry:
     new_bins = (st_table_entry**)
-	xrealloc(table->bins, new_num_bins * sizeof(st_table_entry*));
+	realloc(table->bins, new_num_bins * sizeof(st_table_entry*));
+    if (!new_bins) {
+	if (garbage_collect()) goto retry;
+	return;
+    }
+
     for (i = 0; i < new_num_bins; ++i) new_bins[i] = 0;
     table->num_bins = new_num_bins;
     table->bins = new_bins;
